# Thermopylae

./: .gitignore  README.md  makemask.py
CamCv/: CMakeCache.txt  CMakeLists.txt  Makefile  camcv.c  camcv.c.save  camcv_vid0.c
ForPC/: DebuggingCode.py
ForPi/: forip.py  forpi.py
